fixed slight gradient misalignment on home carousel

--- a/src/styles/HousingCard.css
+++ b/src/styles/HousingCard.css
@@ -5,14 +5,14 @@
     padding-bottom: 8%;
     margin: 2.5vw;
     
-    background-color: #FF6060;
+    background-color: none;
     border-radius: 10px; 
 }
 
 .housing-card__image {
     object-fit: cover;
     max-width: 100%;
-    height: 144%;
+    height: 143.7%;
     border-radius: 10px;
 }
 
